yaml_chae/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx

---
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat
