yaml_chae/service_nginx_v1.0.yaml
### v2.0  ###

apiVersion: v1
kind: Service
metadata:
  name: films-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.101
  selector:
    app: nginx
    name: films
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30201

---
apiVersion: v1
kind: Service
metadata:
  name: index-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.102
  selector:
    app: nginx
    name: index
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30202

---
apiVersion: v1
kind: Service
metadata:
  name: join-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.103
  selector:
    app: nginx
    name: join
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30203

---
apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.104
  selector:
    app: nginx
    name: login
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30204

---
apiVersion: v1
kind: Service
metadata:
  name: mypage-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.105
  selector:
    app: nginx
    name: mypage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30205

---
apiVersion: v1
kind: Service
metadata:
  name: purchase-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.106
  selector:
    app: nginx
    name: purchase
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30206

---
apiVersion: v1
kind: Service
metadata:
  name: snack-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.107
  selector:
    app: nginx
    name: snack
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30207

---
apiVersion: v1
kind: Service
metadata:
  name: userinfo-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.108
  selector:
    app: nginx
    name: userinfo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30208

---
apiVersion: v1
kind: Service
metadata:
  name: lastfilms-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.109
  selector:
    app: nginx
    name: lastfilms
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30209

---
apiVersion: v1
kind: Service
metadata:
  name: month-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 172.20.100.110
  selector:
    app: nginx
    name: month
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30210
